# geosmell

./: .travis.yml  Dockerfile  LICENSE  README.md  chpopstat.go  chpopstat_test.go  chstatpop.go  chstatpop_test.go  dataset.go  go.mod  main.go  storage.go  test_util.go  wikicommons.go  wikicommons_test.go
testdata/chstatpop/: 9606372.html  list.html  notfound.html
testdata/wikicommons/: 20190820.html  index.html  notfound.html
tools/: CMakeLists.txt  chpopstat.cc  chpopstat.h  chpopstat_convert.cc  chpopstat_test.cc
